<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    android:theme="@style/Theme.MaterialComponents"
    android:background="@color/colorSecondary">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="20dp"
        android:gravity="center">
<!--        <ImageView-->
<!--            android:id="@+id/app_name_main"-->
<!--            android:layout_width="48dp"-->
<!--            android:layout_height="48dp"-->
<!--            app:srcCompat="@drawable/language"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            tools:ignore="ContentDescription" />-->
        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>


    <!--button to direct user to add phrase activity-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_main_add_phrase"
        style="@style/CardView.Custom"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:cardBackgroundColor="@color/colorSecondary"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="true"
        android:tag="add">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/files_and_folders"
                android:backgroundTint="@color/colorPrimary"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_Phrase"
                style="@style/CardView.Custom.ButtonText"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>




    <!--button to direct user to add edit phrase-->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_main_edit_phrase"
        style="@style/CardView.Custom"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_add_phrase"
        app:cardBackgroundColor="@color/colorSecondary"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="true"
        android:tag="edit">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/writing"
                android:backgroundTint="@color/colorPrimary"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_phrase"
                style="@style/CardView.Custom.ButtonText"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--button to direct user to display phrase activity-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_main_disp_phrase"
        style="@style/CardView.Custom"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_edit_phrase"
        app:cardBackgroundColor="@color/colorSecondary"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="true"
        android:tag="display">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/list"
                android:backgroundTint="@color/colorPrimary"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_phrases"
                style="@style/CardView.Custom.ButtonText"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <!--button to direct user to the language subscription activity-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_main_subscrip"
        style="@style/CardView.Custom"
        app:layout_constraintTop_toBottomOf="@id/btn_main_disp_phrase"
        app:cardBackgroundColor="@color/colorSecondary"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="true"
        android:tag="subscribe">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/subscription"
                android:backgroundTint="@color/colorPrimary"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_subscriptions"
                style="@style/CardView.Custom.ButtonText"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--button to direct user to the translate activity-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_main_translate"
        style="@style/CardView.Custom"
        app:layout_constraintTop_toBottomOf="@id/btn_main_subscrip"
        app:cardBackgroundColor="@color/colorSecondary"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="true"
        android:tag="translate">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/translator"
                android:backgroundTint="@color/colorPrimary"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate"
                style="@style/CardView.Custom.ButtonText"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>