<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranslateActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/language"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ap_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/translate_phrase"
        android:textColor="#FE3DBC"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="574dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getSvdPhraseBtn"
            android:onClick="getSavedPhrases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/get_saved_phrase"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_marginBottom="10dp">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addTphrase"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/enter_text_hint"
            android:textColorHint="@color/colorAccent"
            app:boxBackgroundColor="@color/colorSecondary"
            app:boxStrokeColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tPhrase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>



        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cropToPadding="false"
            android:paddingTop="-10dp"
            android:paddingBottom="-10dp"
            android:rotation="90"
            app:srcCompat="@drawable/transfer" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/displayTphrase"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/colorAccent"
            android:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/translate_phrase"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_marginTop="10dp">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>